# 8theChip

./: CMakeLists.txt  README.md
src/: chip8.cpp  chip8.hpp  main.cpp
